# RoboCup

./: .gitignore  .gitmodules  LICENSE  Readme.md
HostComputer/VOFAConfig/: Readme.md  RoboCup.cmds.json  RoboCup.tabview.json  RoboCupArmControl.tab.json  RoboCupMotion.tab.json  RoboCupMotion.tabview.json  vofa+.cmds.json  vofa+.tabviews.json
ImageProcessing/: Protocol.md  Readme.md
ImageProcessing/HSV/HSV_Range/: HSV_Filter.cpp  HSV_Filter.hpp  HSV_Range.qrc  HSV_Range.sln  HSV_Range.vcxproj  HSV_Range.vcxproj.filters  HSV_RangeApplication.cpp  HSV_RangeApplication.hpp  HSV_RangeWindow.cpp  HSV_RangeWindow.h  HSV_RangeWindow.ui  main.cpp
ImageProcessing/HSV/RoboCupImageProcessing/: CMakeLists.txt  configs.yml  调试方法.docx
ImageProcessing/K210/: Banana.txt  Pear.txt  Pitaya.txt  boot.py
ImageProcessing/K210/Detector/: AppleDetector.py
ImageProcessing/K210/Examples/: AppleYoloAdvance.py  FindAppleByBlob.py  Record.py  labels.txt
ImageProcessing/K210/Protocol/: Readme.md
ImageProcessing/K210_YoloV2/: Apple.txt  AppleYoloOnly.py  KiwiFruit.txt  Lemon.txt  Orange.txt  Peach.txt  SnowPear.txt  main.py  数据定义.txt
ImageProcessing/K210_YoloV2/Detector/: AppleDetector.py
ImageProcessing/K210_YoloV2/Examples/: 2.pgm  YoloLoadModuleSpeedTest.py
ImageProcessing/K210_YoloV2/Protocol/: Protocol.py
ImageProcessing/Linux/CascadeForKiwiFruit/: KiwiFruit.py  TemplateMatch.py  cascade.xml
ImageProcessing/Linux/RoboCupImageProcessing/: CMakeLists.txt  CMakeSettings.json  Readme.md  configs.yml  main.cpp  ~$调试方法.docx  ~WRL2589.tmp  调试方法.docx
ImageProcessing/Linux/RoboCupImageProcessing/CMake/: FindGlog.cmake
ImageProcessing/Linux/RoboCupImageProcessing/Configs/: BaseConfigs.cpp  BaseConfigs.hpp  Configs.cpp  Configs.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Configs/ApplicationConfigs/: ApplicationConfigs.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Configs/DetectorConfigs/: AppleDetectorConfigs.cpp  AppleDetectorConfigs.hpp  BananaDetectorConfigs.hpp  DetectorConfigs.cpp  DetectorConfigs.hpp  KiwiFruitDetectorConfigs.hpp  LemonDetectorConfigs.hpp  OrangeDetectorConfigs.hpp  PeachDetectorConfigs.hpp  PearDetectorConfigs.hpp  SnowPearDetectorConfigs.hpp  TargetDetectorConfigs.cpp  TargetDetectorConfigs.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Configs/FruitDetectorConfigs/: FruitDetectorConfigs.cpp  FruitDetectorConfigs.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Detectors/: AppleDetector.cpp  AppleDetector.hpp  BananaDetector.cpp  BananaDetector.hpp  Detector.cpp  Detector.hpp  FruitDetector.cpp  FruitDetector.hpp  KiwiFruitDetector.cpp  KiwiFruitDetector.hpp  LemonDetector.cpp  LemonDetector.hpp  OrangeDetector.cpp  OrangeDetector.hpp  PeachDetector.cpp  PeachDetector.hpp  PearDetector.cpp  PearDetector.hpp  PitayaDetector.cpp  PitayaDetector.hpp  SnowPearDetector.cpp  SnowPearDetector.hpp  TargetDetector.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Exceptions/: ConfigParameterInvalid.hpp
ImageProcessing/Linux/RoboCupImageProcessing/HSV_Filter/: HSV_Filter.cpp  HSV_Filter.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Monitor/: Monitor.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Monitor/FrameBufferMonitor/: FrameBufferMonitor.cpp  FrameBufferMonitor.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Monitor/OpenCV_Monitor/: OpenCV_Monitor.cpp  OpenCV_Monitor.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Protocol/: Protocol.hpp
ImageProcessing/Linux/RoboCupImageProcessing/Protocol/Serial/: SerialProtocol.cpp  SerialProtocol.hpp
ImageProcessing/Linux/RoboCupImageProcessing/WorkingFlow/: MainWorkingFlow.cpp  MainWorkingFlow.hpp  WorkingFlow.hpp
ImageProcessing/OpenMV/: Apple.cascade  Apple.py  Readme.md  cascade.cascade  cascade.xml
ImageProcessing/RKNN/: Readme.md
ImageProcessing/RKNN/Code/: main.py
ImageProcessing/RKNN/FrameBufferMonitor/: build.sh
ImageProcessing/RKNN/Protocol/: SerialProtocol.py
ImageProcessing/YoloFastest/: Command.txt  Readme.md  bad.list  train.data  yolo-fastest.cfg  yolo-fastest_best.weights
ImageProcessing/YoloV4Tiny/: Fruit.names  Readme.md
Machine/: 16齿同步轮.SLDPRT  2020角件.SLDPRT  2040角件.SLDPRT  2040铝型材230mm.SLDPRT  2040铝型材300mm.SLDPRT  3429电机.SLDPRT  42步进.SLDPRT  42步进35mm.SLDPRT  42步进40mm.SLDPRT  42步进支架.SLDPRT  5转8联轴器.SLDPRT  6mm滑杆220mm.SLDPRT  6mm滑杆230mm.SLDPRT  6mm滑杆307mm.SLDPRT  6mm滑杆直线轴承.SLDPRT  8mmx4丝杆285mm.SLDPRT  8mm丝杆轴承.SLDPRT  CameraSupport70VersionPart1.STL  K210Supporter.STL  L形件.SLDPRT  M3紧固螺丝.SLDPRT  M3铜柱10mm.SLDPRT  M3铜柱12mm.SLDPRT  M3铜柱17mm.SLDPRT  M3铜柱32mm.SLDPRT  M3铜柱39.5mm.SLDPRT  M4大垫片.SLDPRT  M4铜柱40mm.SLDPRT  Readme.md  TODO.txt  TOFSuppter.SLDPRT  ~$16齿同步轮.SLDPRT  一字件.SLDPRT  丝杆底支架.SLDPRT  丝杆滑台内支架.SLDPRT  丝杆滑台外支架.SLDPRT  丝杆滑块.SLDPRT  丝杆螺母.SLDPRT  丝杆螺母支架.SLDPRT  丝杆顶支架.SLDPRT  (+47 more)
Machine/3D打印STL/: TOFSuppter.STL  丝杆底支架.STL  丝杆滑台内支架.STL  丝杆滑台外支架.STL  丝杆滑块.STL  丝杆螺母支架.STL  丝杆顶支架.STL  侧TOF支架.STL  同步带轴承支架.STL  图像处理模块外壳上壳.SLDPRT  图像处理模块外壳上壳.STL  摄像头支架.STL  摄像头连接座.STL  电池垫板.STL  直线轴承支架.STL  磁铁竖向支架.STL  霍尔传感器支架.STL
Machine/Archived/: CameraSupport70VersionPart1.SLDPRT  K210Supporter.SLDPRT
Machine/[已知问题]/: knownissues.txt
Machine/玻纤板切割/: PCB1.EXTREP  PCB1.GM1  PCB1.PcbDoc  PCB1.REP  PCB1.RUL  PCB1.apr  Status Report.Txt
Machine/铝板切割DXF/: 摄像头支架.DXF  机械臂连接板.DXF
Machine/铝板切割dxf/: 机械臂杆件140mm.DXF  舵机云台中心圆盘转大圆盘底盘.DXF  舵机云台中心圆盘转大圆盘顶盘.DXF  说明.txt
OpenMV/: cascade_convert.py
OpenMV/CascadeClassifier/: GenerateBackgroundList.py
PCB_Project/: Readme.md
PCB_Project/RobotPCB/: PCB1.PcbDoc  PCB_Project.PrjPcb
STM32/: .cproject  .mxproject  .project  Readme.md  RobotConfigs.Kconfig  STM32 Debug.launch  STM32.ioc  STM32F103RCTX_FLASH.ld
STM32/Inc/: main.h  stm32_assert.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
STM32/Release/: STM32.elf  STM32.list  STM32.map  makefile  objects.list  sources.mk
STM32/Src/: PrivateConfigs.h  RobotConfigs.h  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
VOFAConfig/: vofa+.tabviews.json
yolo/K210_YoloV2/: m.kmodel
yolo/yoloV4Tiny/: Command.txt  bad.list  train.data  yolov4-tiny.cfg
yolo/yoloV5s/: yolov5s6.cfg
(+416 files in other folders)
